syntax = "proto3";

package controlplane;

option go_package = "github.com/posthog/duckgres/controlplane/proto";

// WorkerControl is the gRPC service exposed by each long-lived worker process.
// The control plane uses this service to manage workers.
service WorkerControl {
  // Configure initializes the worker with database and TLS settings.
  // Must be called once before AcceptConnection.
  rpc Configure(ConfigureRequest) returns (ConfigureResponse);

  // AcceptConnection tells the worker to accept a new client connection.
  // The raw TCP file descriptor is sent out-of-band via the companion Unix socket.
  rpc AcceptConnection(AcceptConnectionRequest) returns (AcceptConnectionResponse);

  // CancelQuery cancels a running query by backend key.
  rpc CancelQuery(CancelQueryRequest) returns (CancelQueryResponse);

  // Drain tells the worker to stop accepting new connections and finish existing ones.
  rpc Drain(DrainRequest) returns (DrainResponse);

  // Health returns the worker's current health and load status.
  rpc Health(HealthRequest) returns (HealthResponse);

  // Shutdown tells the worker to drain and exit.
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

message ConfigureRequest {
  string data_dir = 1;
  repeated string extensions = 2;
  int64 idle_timeout_ns = 3;

  // TLS configuration
  string tls_cert_file = 4;
  string tls_key_file = 5;

  // DuckLake configuration
  DuckLakeConfig ducklake = 6;

  // Authentication - map of username -> password
  map<string, string> users = 7;
}

message DuckLakeConfig {
  string metadata_store = 1;
  string object_store = 2;
  string data_path = 3;
  string s3_provider = 4;
  string s3_endpoint = 5;
  string s3_access_key = 6;
  string s3_secret_key = 7;
  string s3_region = 8;
  bool s3_use_ssl = 9;
  string s3_url_style = 10;
  string s3_chain = 11;
  string s3_profile = 12;
}

message ConfigureResponse {
  bool ok = 1;
  string error = 2;
}

message AcceptConnectionRequest {
  string remote_addr = 1;
  int32 backend_secret_key = 2;
}

message AcceptConnectionResponse {
  bool ok = 1;
  int32 backend_pid = 2;
  string error = 3;
}

message CancelQueryRequest {
  int32 backend_pid = 1;
  int32 secret_key = 2;
}

message CancelQueryResponse {
  bool cancelled = 1;
}

message DrainRequest {
  int64 timeout_ns = 1;
}

message DrainResponse {
  bool ok = 1;
  int32 remaining_connections = 2;
}

message HealthRequest {}

message HealthResponse {
  bool healthy = 1;
  int32 active_connections = 2;
  int64 uptime_ns = 3;
  int64 total_queries = 4;
  bool draining = 5;
}

message ShutdownRequest {
  int64 timeout_ns = 1;
}

message ShutdownResponse {
  bool ok = 1;
}
